# elastic-common-schema-rs

./: Cargo.toml  README.md
scripts/: generate-consts-from-spec.sh
scripts/templates/: ecs-consts.rs.j2  header.rs
src/: ecs.rs  lib.rs
tests/: integration.rs
